--- a/src/app/inicial/inicial.page.scss
+++ b/src/app/inicial/inicial.page.scss
@@ -2,14 +2,13 @@
   background-image: url('../../assets/imagens/fundo-arvores-removebg-preview.png');
   background-repeat: repeat-x;
   background-size: contain;
-  background-position: bottom;
+  background-position: center bottom;
   width: 100%;
-  height: auto;
+  height: 100%; /* Garante que a div content cubra todo o ion-content */
   display: flex;
   flex-direction: column;
-  align-items: center;
-  display: flex;
-  justify-content: center;
+  align-items: center; /* Centraliza horizontalmente o conteúdo interno */
+  position: fixed;
 }
 
 .content {
