--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -10,14 +10,16 @@ ion-content {
 }
 
 .bgd {
-  background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png');
+  background-image: url('../../assets/imagens/fundo-arvores-removebg-preview.png');
   background-repeat: repeat-x;
   background-size: contain;
   background-position: center bottom;
   width: 100%;
-  height: auto;
-  padding-top: 35px;
-  padding-bottom: 40px;
+  height: 100%; /* Garante que a div content cubra todo o ion-content */
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centraliza horizontalmente o conteúdo interno */
+  position: fixed;
 }
 
 img {
