--- a/src/app/solicitacao/solicitacao.page.scss
+++ b/src/app/solicitacao/solicitacao.page.scss
@@ -79,8 +79,6 @@ hr {
 }
 
 /* ----------- AGENDAMENTO ----------- */
-
-/* Ajustes para o campo de data */
 .solicitacao-form ion-input[type="date"] {
   width: 100%;
   padding: 12px 16px;
@@ -92,7 +90,6 @@ hr {
   color: #333;
 }
 
-/* Ajustes para o campo de hora */
 .solicitacao-form ion-input[type="time"] {
   width: 100%;
   padding: 12px 16px;
@@ -115,6 +112,7 @@ hr {
   text-align: center;
   font-size: 4.5vw;
 }
+
 /* ----------- INPUT DE ARQUIVO ----------- */
 .solicitacao-form input[type="file"] {
   display: none; /* Esconde o input de arquivo padrão */
@@ -144,4 +142,61 @@ hr {
 .solicitacao-form input[type="file"]:focus + label.file-label {
   outline: none;
   box-shadow: 0 0 5px rgba(47, 158, 37, 0.7); /* Sombra ao focar */
+}
+
+/* ----------- RESPONSIVO PARA TELA PEQUENA ----------- */
+@media screen and (max-width: 768px) {
+  .solicitacao-form {
+    max-width: 90%;
+  }
+
+  .solicitacao-form h6 {
+    font-size: 5vw;
+  }
+
+  .solicitacao-form ion-select,
+  .solicitacao-form input[type="number"],
+  .solicitacao-form textarea,
+  .solicitacao-form ion-input[type="date"],
+  .solicitacao-form ion-input[type="time"] {
+    font-size: 4.5vw; /* Ajuste do tamanho da fonte para telas menores */
+  }
+
+  .solicitacao-form .btn-submit {
+    font-size: 4.5vw;
+    width: 80%;
+  }
+
+  .solicitacao-form label.file-label {
+    font-size: 4.5vw;
+  }
+}
+
+/* ----------- RESPONSIVO PARA TELAS MUITO PEQUENAS ----------- */
+@media screen and (max-width: 480px) {
+  .solicitacao-form {
+    max-width: 90%;
+    padding: 10px;
+  }
+
+  .solicitacao-form h6 {
+    font-size: 6vw;
+  }
+
+  .solicitacao-form ion-select,
+  .solicitacao-form input[type="number"],
+  .solicitacao-form textarea,
+  .solicitacao-form ion-input[type="date"],
+  .solicitacao-form ion-input[type="time"] {
+    font-size: 5vw; /* Ajuste para telas muito pequenas */
+  }
+
+  .solicitacao-form .btn-submit {
+    font-size: 5vw;
+    width: 90%;
+  }
+
+  .solicitacao-form label.file-label {
+    font-size: 5vw;
+  }
 }
