att tela de pagamento, solicitação e app-routing pagamento

--- a/src/app/pagamento/pagamento.page.html
+++ b/src/app/pagamento/pagamento.page.html
@@ -35,7 +35,7 @@
       </ion-grid>
 
     <div class="btn-pagar"> 
-      <button type="submit">Pagar</button>
+      <button type="submit" (click)="pagar()">Pagar</button>
     </div>
   </div>
   </ion-content>
