att finalizar e cancelar pedido pelo prestador

--- a/src/app/pedido-prestador/pedido-prestador.page.html
+++ b/src/app/pedido-prestador/pedido-prestador.page.html
@@ -82,10 +82,15 @@
         </ion-card-content>
       </ion-card>
 
-      <div class="botoes-finais">
-        <ion-button class="btn-negociar">Negociar</ion-button>
-        <ion-button class="btn-aceitar" (click)="aceitarSolicitacao()" >Aceitar</ion-button>
+      <div class="botoes-finais" *ngIf="solicitacao?.progress === 'inProgress'">
+        <ion-button class="btn-negociar" (click)="cancelarSolicitacao()">Cancelar</ion-button>
+        <ion-button class="btn-aceitar" (click)="finalizarSolicitacao()">Finalizar</ion-button>
       </div>
-  </div>
+
+      <div class="botoes-finais" *ngIf="solicitacao?.progress !== 'inProgress'">
+        <ion-button class="btn-negociar">Negociar</ion-button>
+        <ion-button class="btn-aceitar" (click)="aceitarSolicitacao()">Aceitar</ion-button>
+      </div>
+    </div>
   <ion-spinner *ngIf="!solicitacao" name="crescent" style="display: block; margin: 50% auto;"></ion-spinner>
 </ion-content>
