pequena att pedidos-prestador

--- a/src/app/pedidos-prestador/pedidos-prestador.page.scss
+++ b/src/app/pedidos-prestador/pedidos-prestador.page.scss
@@ -56,6 +56,11 @@ ion-card-subtitle{
     color: #0a4e23;
     // --background: #c4d3c5; não gostei da cor
 }
+.subtitle-páying{
+     border: solid, 1px, rgb(21, 0, 255);
+    background-color: rgb(21, 0, 255);
+    color: rgb(21, 0, 255);
+}
 
 // </card>
 
