--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <div class="container bgd">
     
-    <img src="/assets/imagens/logo-app-coleta-verde.png" alt="">
+    <div class="logo-container"><img src="/assets/imagens/logo-app-coleta-verde.png" alt=""></div>
 
     <h2 class="welcome">Bem - Vindos</h2>
 
