--- a/src/app/settings-notfications/settings-notfications.page.html
+++ b/src/app/settings-notfications/settings-notfications.page.html
@@ -1,13 +1,21 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>settings-notfications</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Gerenciar Notificações</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">settings-notfications</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-content class="content">
+    <div class="custom-item">
+      <span>Notificações</span>
+      <ion-toggle></ion-toggle>
+    </div>
+  </ion-content>
+
+
 </ion-content>
+
+<app-footer-global></app-footer-global>
