--- a/src/app/component/toolbar-global/toolbar-global.component.html
+++ b/src/app/component/toolbar-global/toolbar-global.component.html
@@ -9,7 +9,7 @@
     </ion-title>
 
     <ion-buttons slot="end">
-        <ion-icon slot="icon-only" name="notifications-outline"></ion-icon>
+        <ion-icon class="botao-notificacao" slot="icon-only" name="notifications-outline"></ion-icon>
         <ion-badge *ngIf="qtdNovasSolicitacoes > 0" color="danger" class="notification-badge">
           {{ qtdNovasSolicitacoes }}
         </ion-badge>
