--- a/src/app/home-cliente/home-cliente.page.html
+++ b/src/app/home-cliente/home-cliente.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <app-toolbar-global [titulo]="'Início'" [mostrarBotaoVoltar]="false"></app-toolbar-global>
+    <app-toolbar-global [titulo]="''" [mostrarBotaoVoltar]="false"></app-toolbar-global>
   </ion-toolbar>
 </ion-header>
 
@@ -9,10 +9,6 @@
     <div class="bgd-superior">
       <img class="img-logo" src="/assets/imagens/logo-app-coleta-verde.png" alt="logo-app-coleta-verde" />
     </div>
-
-    <ion-button fill="outline" size="small" style="margin-left: 45%;" [routerLink]="['/navegacao-teste-front']">
-      NAVEGAR
-    </ion-button>
 
     <div class="atalhos-home">
       <h2>COLETA DE LIXO</h2>
