--- a/src/app/inicial/inicial.page.scss
+++ b/src/app/inicial/inicial.page.scss
@@ -11,6 +11,10 @@
   position: fixed;
 }
 
+ion-content{
+  --background: rgb(233, 237, 237);
+}
+
 .content {
   max-width: 700px;
   width: 100%;
@@ -54,6 +58,8 @@ span {
 
 .btnAcesso {
   --background: #276040 !important;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 ion-button.btnAcesso.cdPrestador {
