--- a/src/app/pagamento/pagamento.page.html
+++ b/src/app/pagamento/pagamento.page.html
@@ -5,37 +5,27 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <div class="content">
+    <div class="content-padding bgd">
+        <p class="p-pagamento">Qual a forma de pagamento:</p>
 
-  <div class="content-padding bgd">
-    <p>Digite o valor combinado:</p>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="6" *ngFor="let forma of formasPagamento">
+              <ion-button
+                expand="block"
+                [ngClass]="formaSelecionada === forma ? 'botao-verde-claro' : 'botao-cinza'"
+                (click)="selecionarForma(forma)"
+              >
+                {{ forma | titlecase }}
+              </ion-button>
+            </ion-col>
+          </ion-row>
+          </ion-grid>
 
-    <ion-item class="formatarMoeda">
-      <ion-label position="floating"></ion-label>
-      <ion-input
-        type="text"
-        [(ngModel)]="valor"
-        (ionInput)="formatarMoeda($event)"
-      ></ion-input>
-    </ion-item>
-
-      <p class="p-pagamento">Qual a forma de pagamento:</p>
-
-      <ion-grid>
-        <ion-row>
-          <ion-col size="6" *ngFor="let forma of formasPagamento">
-            <ion-button
-              expand="block"
-              [ngClass]="formaSelecionada === forma ? 'botao-verde-claro' : 'botao-cinza'"
-              (click)="selecionarForma(forma)"
-            >
-              {{ forma | titlecase }}
-            </ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-
-    <div class="btn-pagar"> 
-      <button type="submit" (click)="pagar()">Pagar</button>
+        <div class="btn-pagar"> 
+          <button type="submit" (click)="pagar()">Pagar</button>
+        </div>
+      </div>
     </div>
-  </div>
   </ion-content>
