--- a/src/app/solicitacao/solicitacao.page.html
+++ b/src/app/solicitacao/solicitacao.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <app-toolbar-global [titulo]="'Solicitação e Agendamento'"></app-toolbar-global>
+    <app-toolbar-global [titulo]="''"></app-toolbar-global>
   </ion-toolbar>
 </ion-header>
 
