--- a/src/app/notificacoes/notificacoes.page.scss
+++ b/src/app/notificacoes/notificacoes.page.scss
@@ -1,16 +1,31 @@
-ion-content{
-    --background: rgb(233, 237, 237);
-    padding: 15px;
- }
+ion-content {
+  --background: rgb(233, 237, 237);
+  padding: 15px;
+}
 
-.content{
-    background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png');
-    background-repeat: repeat-x;
-    background-size: contain;
-    background-position: center bottom;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    display: flex;
-    padding: 40px 0;
+.content {
+  background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png');
+  background-repeat: repeat-x;
+  background-size: contain;
+  background-position: center bottom;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  display: flex;
+  padding: 40px 0;
+}
+
+.content ion-text {
+  background-color: #276042db;
+  font-size: 18px;
+  border-radius: 12px;
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.contentBg {
+  max-width: 700px;
+  width: 100%;
 }
