pagina de dados do cliente

--- a/src/app/perfil-cliente/perfil-cliente.page.html
+++ b/src/app/perfil-cliente/perfil-cliente.page.html
@@ -39,7 +39,7 @@
     <div class="card-cinza">
       <ion-item lines="none" routerLink="#">
         <ion-icon name="person-outline" slot="start"></ion-icon>
-        <ion-label>
+        <ion-label routerLink="/dados-da-conta">
           <h2>Dados da conta</h2>
           <p>Minhas informações da conta</p>
         </ion-label>
