--- a/src/app/perfil-cliente/perfil-cliente.page.html
+++ b/src/app/perfil-cliente/perfil-cliente.page.html
@@ -29,7 +29,7 @@
     <div class="card-cinza">
       <ion-item lines="none" routerLink="#">
         <ion-icon name="notifications-outline" slot="start"></ion-icon>
-        <ion-label (click)="abrirDadosConta()">
+        <ion-label (click)="abrirNotificacoes()" >
           <h2>Notificações</h2>
           <p>Minha central de notificações</p>
         </ion-label>
@@ -39,7 +39,7 @@
     <div class="card-cinza">
       <ion-item lines="none" routerLink="#">
         <ion-icon name="person-outline" slot="start"></ion-icon>
-        <ion-label routerLink="/dados-da-conta">
+        <ion-label (click)="abrirDadosConta()">
           <h2>Dados da conta</h2>
           <p>Minhas informações da conta</p>
         </ion-label>
