--- a/src/app/cadastro-prestador/cadastro-prestador.page.html
+++ b/src/app/cadastro-prestador/cadastro-prestador.page.html
@@ -8,28 +8,31 @@
       <div class="input-group">
         <ion-item>
           <ion-label position="floating">Nome Completo</ion-label>
-          <ion-input type="text" class="input-field" [(ngModel)]="nomeCompleto"></ion-input>
+          <ion-input type="text" aria-required="true" class="input-field" [(ngModel)]="nomeCompleto"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label position="floating">CPF</ion-label>
-          <ion-input type="text" class="input-field" [(ngModel)]="cpf"></ion-input>
+          <ion-input type="text" aria-required="true" class="input-field" maxlength="14" [(ngModel)]="cpf"
+            (ionInput)="formatarCpf($event)"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label position="floating">Email</ion-label>
-          <ion-input type="email" class="input-field" [(ngModel)]="email"></ion-input>
+          <ion-input type="email" aria-required="true" placeholder="email@domain.com" class="input-field" [(ngModel)]="email"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label position="floating">Telefone</ion-label>
-          <ion-input type="tel" class="input-field"></ion-input>
+          <ion-input type="tel" aria-required="true" [(ngModel)]="telefone" class="input-field"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label position="floating">Senha</ion-label>
-          <ion-input [type]="passwordVisible ? 'text' : 'password'" class="input-field" [(ngModel)]="senha"></ion-input>
-          <ion-icon class="eye-icon" slot="end" [name]="passwordVisible ? 'eye-outline' : 'eye-off-outline'" (click)="togglePasswordVisibility()"></ion-icon>
+          <ion-input aria-required="true" [type]="passwordVisible ? 'text' : 'password'" class="input-field"
+            [(ngModel)]="senha"></ion-input>
+          <ion-icon class="eye-icon" slot="end" [name]="passwordVisible ? 'eye-outline' : 'eye-off-outline'"
+            (click)="togglePasswordVisibility()"></ion-icon>
         </ion-item>
       </div>
 
