--- a/src/app/cadastro-prestador/cadastro-prestador.page.scss
+++ b/src/app/cadastro-prestador/cadastro-prestador.page.scss
@@ -22,6 +22,7 @@ ion-content {
   flex-direction: column;
   align-items: center; /* Centraliza horizontalmente o conteúdo interno */
   position: fixed;
+  overflow: scroll;
 }
 
 .logo-container {
