--- a/src/app/cadastro-prestador/cadastro-prestador.page.html
+++ b/src/app/cadastro-prestador/cadastro-prestador.page.html
@@ -28,7 +28,7 @@
 
         <ion-item>
           <ion-label position="floating">Senha</ion-label><br>
-          <ion-input aria-required="true" placeholder="******" [type]="passwordVisible ? 'text' : 'password'" class="input-field"
+          <ion-input aria-required="true" minlength="7" placeholder="******" [type]="passwordVisible ? 'text' : 'password'" class="input-field"
             [(ngModel)]="senha"></ion-input>
           <ion-icon class="eye-icon" slot="end" [name]="passwordVisible ? 'eye-outline' : 'eye-off-outline'"
             (click)="togglePasswordVisibility()"></ion-icon>
