--- a/src/app/cadastro-prestador/cadastro-prestador.page.scss
+++ b/src/app/cadastro-prestador/cadastro-prestador.page.scss
@@ -1,12 +1,18 @@
 ion-content {
-  --background: rgb(233, 237, 237); /* Cor de fundo padrão */
+  --background: rgb(233, 237, 237);
+  /* Cor de fundo padrão */
   display: flex;
   flex-direction: column;
-  align-items: center; /* Centraliza horizontalmente */
-  justify-content: flex-start; /* Alinha o conteúdo ao topo */
-  min-height: 100vh; /* Garante que o ion-content ocupe toda a altura da viewport */
-  padding-bottom: 20px; /* Espaçamento inferior (igual ao primeiro) */
-  padding-top: 30px; /* Espaçamento superior (igual ao primeiro) */
+  align-items: center;
+  /* Centraliza horizontalmente */
+  justify-content: flex-start;
+  /* Alinha o conteúdo ao topo */
+  min-height: 100vh;
+  /* Garante que o ion-content ocupe toda a altura da viewport */
+  padding-bottom: 20px;
+  /* Espaçamento inferior (igual ao primeiro) */
+  padding-top: 30px;
+  /* Espaçamento superior (igual ao primeiro) */
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -17,12 +23,14 @@ ion-content {
   background-size: contain;
   background-position: center bottom;
   width: 100%;
-  height: 100%; /* Garante que a div content cubra todo o ion-content */
+  height: 100%;
+  /* Garante que a div content cubra todo o ion-content */
   display: flex;
   flex-direction: column;
-  align-items: center; /* Centraliza horizontalmente o conteúdo interno */
+  align-items: center;
+  /* Centraliza horizontalmente o conteúdo interno */
   position: fixed;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 .logo-container {
@@ -37,8 +45,10 @@ ion-content {
 }
 
 .form-container {
-  width: 80%; /* Largura igual ao primeiro */
-  max-width: 400px; /* Largura máxima igual ao primeiro */
+  width: 80%;
+  /* Largura igual ao primeiro */
+  max-width: 400px;
+  /* Largura máxima igual ao primeiro */
   background-color: rgba(255, 255, 255, 0.8);
   padding: 20px;
   border-radius: 10px;
@@ -80,5 +90,6 @@ ion-label {
 }
 
 .background-container {
-  display: none; /* Oculta o background-container adicional para manter a aparência do primeiro */
+  display: none;
+  /* Oculta o background-container adicional para manter a aparência do primeiro */
 }
