--- a/src/app/cadastro-cliente/cadastro-cliente.page.html
+++ b/src/app/cadastro-cliente/cadastro-cliente.page.html
@@ -7,24 +7,28 @@
     <div class="form-container">
       <div class="input-group">
         <ion-item>
-          <ion-label position="floating">Nome da Empresa</ion-label>
-          <ion-input type="text" class="input-field" [(ngModel)]="nomeEmpresa"></ion-input>
+          <ion-label position="floating">Nome da Empresa</ion-label><br>
+          <ion-input type="text" placeholder="Nome da Empresa" class="input-field"
+            [(ngModel)]="nomeEmpresa"></ion-input>
         </ion-item>
 
         <ion-item>
-          <ion-label position="floating">CNPJ da Empresa</ion-label>
-          <ion-input type="text" class="input-field" [(ngModel)]="cnpj"></ion-input>
+          <ion-label position="floating">CNPJ da Empresa</ion-label><br>
+          <ion-input type="text" class="input-field" [(ngModel)]="cnpj" maxlength="18" placeholder="00.000.000/0000-00"
+            (ionInput)="formatarCNPJ($event)" (keypress)="permitirSomenteNumeros($event)"></ion-input>
         </ion-item>
 
         <ion-item>
-          <ion-label position="floating">Email</ion-label>
-          <ion-input type="email" class="input-field" [(ngModel)]="email"></ion-input>
+          <ion-label position="floating">Email</ion-label><br>
+          <ion-input type="email" class="input-field" placeholder="email@domain.com" [(ngModel)]="email"></ion-input>
         </ion-item>
 
         <ion-item>
-          <ion-label position="floating">Senha</ion-label>
-          <ion-input [type]="passwordVisible ? 'text' : 'password'" class="input-field" [(ngModel)]="senha"></ion-input>
-          <ion-icon class="eye-icon" slot="end" [name]="passwordVisible ? 'eye-outline' : 'eye-off-outline'" (click)="togglePasswordVisibility()"></ion-icon>
+          <ion-label position="floating">Senha</ion-label><br>
+          <ion-input [type]="passwordVisible ? 'text' : 'password'" minlength="8" maxlength="20" placeholder="******"
+            class="input-field" [(ngModel)]="senha"></ion-input>
+          <ion-icon class="eye-icon" slot="end" [name]="passwordVisible ? 'eye-outline' : 'eye-off-outline'"
+            (click)="togglePasswordVisibility()"></ion-icon>
         </ion-item>
       </div>
 
