Alerta ao Tentar Redefinir Senha

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-content>
   <div class="container bgd">
-    
+
     <div class="logo-container"><img src="/assets/imagens/logo-app-coleta-verde.png" alt=""></div>
 
     <h2 class="welcome">Bem - Vindos</h2>
@@ -20,7 +20,7 @@
 
         <ion-button expand="block" class="enter-button" (click)="submitLogin()">Entrar</ion-button>
 
-        <p class="forgot-password">Esqueci minha senha</p>
+        <p class="forgot-password" (click)="esqueciSenha()">Esqueci minha senha</p>
 
       </div>
     </div>
