--- a/src/app/finalizar-pedido-prestador/finalizar-pedido-prestador.page.html
+++ b/src/app/finalizar-pedido-prestador/finalizar-pedido-prestador.page.html
@@ -28,7 +28,7 @@
       </ion-select>
     </ion-item>
 
-    <ion-button expand="block" class="botao-finalizar">
+    <ion-button expand="block" class="botao-finalizar" (click)="finalizar()">
       Finalizar
     </ion-button>
 
