--- a/src/app/perfil-prestador/perfil-prestador.page.html
+++ b/src/app/perfil-prestador/perfil-prestador.page.html
@@ -46,11 +46,11 @@
     </div>
 
     <div class="card-cinza">
-      <ion-item lines="none" routerLink="#">
+      <ion-item lines="none" (click)="irParaCarteira()">
         <ion-icon name="wallet-outline" slot="start"></ion-icon>
         <ion-label>
-          <h2>Pagamentos</h2>
-          <p>Valor gasto em cada coleta</p>
+          <h2>Carteira</h2>
+          <p>Total acumulado dos serviços</p>
         </ion-label>
       </ion-item>
     </div>
