--- a/src/app/home-prestador/home-prestador.page.html
+++ b/src/app/home-prestador/home-prestador.page.html
@@ -5,51 +5,57 @@
 </ion-header>
 
 <ion-content>
-  <div class="linha-separadora-topo"></div>
+  <div class="contentBg">
+    <div class="content">
+      <div class="linha-separadora-topo"></div>
 
-  <div class="perfil-info-final-fixo card-cinza">
-    <ion-avatar class="avatar-final-fixo">
-      <img src="../../assets/imagens/fotoPerfil/fotoPerfilTrabalhador.png" alt="Foto do Perfil">
-    </ion-avatar>
-    <div class="nome-prestador-final-fixo">
-      <ion-label class="ola-final-fixo">Olá,</ion-label>
-      <ion-label class="nome-final-fixo">{{ nomeUsuario }}</ion-label>
-    </div>
-  </div>
-
-  <div class="card-metricas-final-fixo card-cinza">
-    <div class="metricas-final-fixo">
-      <div class="metrica-item-final-fixo">
-        <h1 class="numero-final-fixo">4</h1>
-        <p class="descricao-final-fixo">Serviços hoje</p>
-      </div>
-      <div class="metrica-item-final-fixo">
-        <h1 class="numero-final-fixo">400</h1>
-        <p class="descricao-final-fixo">Total de serviços feitos</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="card-avaliacao-final-fixo card-cinza">
-    <div class="avaliacao-principal-final-fixo">
-      <ion-icon name="star" color="warning" class="estrela-maior-final-fixo"></ion-icon>
-      <div class="avaliacao-texto-principal-final-fixo">
-        <h2 class="nota-final-fixo">4,0</h2>
-        <div class="estrelas-menores-final-fixo">
-          <ion-icon name="star" color="warning" class="estrela-menor-final-fixo"></ion-icon>
-          <ion-icon name="star" color="warning" class="estrela-menor-final-fixo"></ion-icon>
-          <ion-icon name="star" color="warning" class="estrela-menor-final-fixo"></ion-icon>
-          <ion-icon name="star" color="warning" class="estrela-menor-final-fixo"></ion-icon>
-          <ion-icon name="star-outline" color="warning" class="estrela-menor-final-fixo"></ion-icon>
+      <div class="perfil-info-final-fixo card-cinza">
+        <ion-avatar class="avatar-final-fixo">
+          <img src="../../assets/imagens/fotoPerfil/fotoPerfilTrabalhador.png" alt="Foto do Perfil">
+        </ion-avatar>
+        <div class="nome-prestador-final-fixo">
+          <ion-label class="ola-final-fixo">Olá,</ion-label>
+          <ion-label class="nome-final-fixo">{{ nomeUsuario }}</ion-label>
         </div>
       </div>
-    </div>
-    <p class="tempo-servico-final-fixo">2 anos de serviço</p>
-  </div>
 
-  <div class="card-procurar-final-fixo card-cinza" (click)="irParaCardapio()">
-    <ion-icon name="document-text-outline" class="icone-procurar-final-fixo verde-principal icone-propostas-maior"></ion-icon>
-    <ion-label class="texto-procurar-final-fixo verde-principal-texto texto-propostas-maior">ANALISAR PROPOSTAS</ion-label>
+      <div class="card-procurar-final-fixo card-cinza" (click)="irParaCardapio()">
+        <ion-icon name="document-text-outline" class="icone-procurar-final-fixo verde-principal icone-propostas-maior"></ion-icon>
+        <ion-label class="texto-procurar-final-fixo verde-principal-texto texto-propostas-maior">ANALISAR PROPOSTAS</ion-label>
+      </div>
+
+      <div class="card-metricas-final-fixo card-cinza">
+        <div class="metricas-final-fixo">
+          <div class="metrica-item-final-fixo">
+            <h1 class="numero-final-fixo">4</h1>
+            <p class="descricao-final-fixo">Serviços hoje</p>
+          </div>
+          <div class="metrica-item-final-fixo">
+            <h1 class="numero-final-fixo">400</h1>
+            <p class="descricao-final-fixo">Total de serviços feitos</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-avaliacao-final-fixo card-cinza">
+        <div class="avaliacao-principal-final-fixo">
+          <ion-icon name="star" color="warning" class="estrela-maior-final-fixo"></ion-icon>
+          <div class="avaliacao-texto-principal-final-fixo">
+            <h2 class="nota-final-fixo">4,0</h2>
+            <div class="estrelas-menores-final-fixo">
+              <ion-icon name="star" color="warning" class="estrela-menor-final-fixo"></ion-icon>
+              <ion-icon name="star" color="warning" class="estrela-menor-final-fixo"></ion-icon>
+              <ion-icon name="star" color="warning" class="estrela-menor-final-fixo"></ion-icon>
+              <ion-icon name="star" color="warning" class="estrela-menor-final-fixo"></ion-icon>
+              <ion-icon name="star-outline" color="warning" class="estrela-menor-final-fixo"></ion-icon>
+            </div>
+          </div>
+        </div>
+        <p class="tempo-servico-final-fixo">2 anos de serviço</p>
+      </div>
+
+      
+    </div>
   </div>
 </ion-content>
 
