--- a/src/app/home-prestador/home-prestador.page.scss
+++ b/src/app/home-prestador/home-prestador.page.scss
@@ -220,3 +220,29 @@ ion-content.no-scroll {
 .texto-propostas-maior {
   font-size: 22px; /* maior que os 20px atuais */
 }
+
+
+
+
+.contentBg {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    overflow-y: auto;
+    float: left;
+    max-height: 450px;
+}
+
+.content {
+    max-width: 700px;
+    width: 100%;
+}
+
+@media (max-width: 600px) {
+  .content {
+    max-width: 900px;
+  }
+}
