--- a/src/app/inicial/inicial.page.scss
+++ b/src/app/inicial/inicial.page.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   align-items: center; /* Centraliza horizontalmente o conteúdo interno */
   position: fixed;
+  overflow-y: auto;
 }
 
 ion-content{
