--- a/src/app/pedido-prestador/pedido-prestador.page.scss
+++ b/src/app/pedido-prestador/pedido-prestador.page.scss
@@ -92,3 +92,28 @@ ion-row {
 }
 
 // </botoes-finais>
+
+
+
+.contentBg {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    overflow-y: auto;
+    float: left;
+    max-height: 450px;
+}
+
+.content {
+    max-width: 700px;
+    width: 100%;
+}
+
+@media (max-width: 600px) {
+  .content {
+    max-width: 900px;
+  }
+}
