Função Criadas em Pedido Prestador

--- a/src/app/pedido-prestador/pedido-prestador.page.scss
+++ b/src/app/pedido-prestador/pedido-prestador.page.scss
@@ -5,26 +5,10 @@ ion-content {
 .content {
     position: relative;
     background: #FFFFFF;
-    margin: 10px;
     border-radius: 10px;
     z-index: 2;
-    padding: 16px;
-  }
-
-.blurred-background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(233, 237, 237);
-    background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png');
-    background-repeat: repeat-x;
-    background-size: contain;
-    background-position: center bottom;
-    filter: blur(4px);
-    z-index: 1;
-    opacity: 1;
+    margin: 20px 0;
+    padding: 10px;
   }
 
 .itens-detalhes{
@@ -93,8 +77,6 @@ ion-row {
 
 // </botoes-finais>
 
-
-
 .contentBg {
     width: 100%;
     height: 100%;
@@ -105,6 +87,11 @@ ion-row {
     overflow-y: auto;
     float: left;
     max-height: 450px;
+    background-color: rgb(233, 237, 237);
+    background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png');
+    background-repeat: repeat-x;
+    background-size: contain;
+    background-position: center bottom;
 }
 
 .content {
