Rota para BTN Notificações

--- a/src/app/perfil-prestador/perfil-prestador.page.html
+++ b/src/app/perfil-prestador/perfil-prestador.page.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="card-cinza">
-          <ion-item lines="none" (click)="cliqueFuncaoDesabilitada()">
+          <ion-item lines="none" (click)="irParaNotificacao()">
             <ion-icon name="notifications-outline" slot="start"></ion-icon>
             <ion-label>
               <h2>Notificações</h2>
